# our_changing_world

./: CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  our_changing_world.ipynb  proposal.md  pyproject.toml  requirements.txt
data/: world_country.csv
docs/: improvements.md  proposal.md  reflections-milestone4.md  reflections.md
src/: app.py  functions_for_ranking_trend_charts.ipynb  plot_world.py  scatter_plot.py
