[tool.poetry]
name = "our_changing_world"
version = "0.1.0"
description = ""
authors = ["Rakesh Pandey <pandey03@student.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
dash = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
